recursion.cons.increasing.Increasing.scala.code
def increasing(l:List[Int]): Boolean = {
  if (l.head=<(l.tail).head){
     if (l.tail==Nil){
     	return(true);
   	}else{
     	return(increasing(l.tail));
     }
  }else{
    return(false);
  }
}